--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 </head>
 <body>
 
-    <button class="btn btn-primary" type="button">Primary button</button>
+    <div class="container">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque dolores quidem reiciendis recusandae odit ducimus adipisci veritatis officiis reprehenderit ullam voluptate ea temporibus ad, illo earum similique consectetur culpa laboriosam.
+    </div>
+
+    <div class="container-fluid">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam similique ut temporibus adipisci corporis, animi exercitationem totam, magnam odit molestias facilis excepturi aperiam esse consequatur qui ea repudiandae alias harum
+    </div>
 
     <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
